feat: 24h change, ann ROI, smart presets, fix all sorting in Screener
Backend:
- LEFT JOIN gold.market_detail_cache in unified markets SQL query
- Extract price_change_24h, price_change_pct_24h, volume_24h_change_pct, trade_count_24h, unique_traders_24h from gold cache
- Compute ann_roi live from yes_price + end_date
- Fix SQL column ambiguity with table prefixes (s.is_active, s.volume_total, s.title)
- Fix sort handler: now handles all 8 sort types (volume/price/ending_soon/newest/change_desc/ann_roi_desc)

Frontend:
- Add 6 new fields to UnifiedMarket TypeScript interface
- Add change_desc and ann_roi_desc to SortType
- Fix critical bug: fetchMarkets was hardcoding sort=volume_desc, now uses sortBy state
- Add sortBy to useCallback deps so sort dropdown triggers re-fetch
- Add 2 new table columns: 24h Change (color arrows) and Ann. ROI (color-coded)
- Update colSpan 9 to 11, add 2 skeleton cells
- Add smart preset filter chips: Surging, Moving, Ending Soon, Coin Flips, Longshots, High Activity
- Volume cell shows vol_24h sub-line with vol_change_pct badge
- Add sort options: Most Moving 24h, Best ROI
- Update CSV export with new columns

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,16 +16,21 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
-# Expose port
+# Non-root user for security
+RUN useradd --no-create-home --shell /bin/false appuser \
+    && chown -R appuser:appuser /app
+USER appuser
+
+# DO App Platform injects $PORT; default to 8001 to match http_port in app.yaml
 EXPOSE 8001
 
-# PRODUCTION: Health check with proper timeout
+# PRODUCTION: Health check (DO also does this internally via http_path: /health)
 HEALTHCHECK --interval=15s --timeout=10s --start-period=120s --retries=5 \
-    CMD curl -f http://localhost:8001/health || exit 1
+    CMD curl -f http://localhost:${PORT:-8001}/health || exit 1
 
-# PRODUCTION: Run with gunicorn + uvicorn workers for better stability
-# - 4 workers for parallelism
-# - 120s timeout for slow external API calls  
-# - graceful timeout for connection draining
-# - access logs for debugging
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001", "--workers", "4", "--timeout-keep-alive", "65", "--limit-concurrency", "100", "--backlog", "2048"]
+# PRODUCTION: gunicorn + UvicornWorker
+# - 2 workers: safe for 1 GB RAM (each worker ~200-300 MB)
+# - WEB_CONCURRENCY env var lets DO scale workers without a rebuild
+# - 120s timeout: covers slow AI/DB calls
+# - preload: shares memory between workers (faster startup)
+CMD ["sh", "-c", "exec gunicorn main:app -k uvicorn.workers.UvicornWorker -w ${WEB_CONCURRENCY:-2} -b 0.0.0.0:${PORT:-8001} --timeout 120 --graceful-timeout 30 --keep-alive 65 --preload --access-logfile - --error-logfile -"]
