chore: rename app to eventgraph-denver for hackathon

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -15,7 +15,7 @@
 # BEFORE DEPLOYING — replace every value marked 🔑
 # =============================================================================
 
-name: eventgraph
+name: eventgraph-denver
 region: nyc
 
 # ── Services ──────────────────────────────────────────────────────────────────
